Mheading gap, pro name stuck, contact image-fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -207,6 +207,10 @@ h2{
 }
 
 @media screen and (max-width:796px){
+  #home {
+      height: 90vh;
+      flex-direction: column;
+    }
   .toggle-button{
     display: flex;
   }
@@ -248,18 +252,16 @@ h2{
   .nav-side.active{
     left: 0;
   }
-  #home{
-    padding-top: 222px;
-    flex-direction: column;
-
-  }
-  .about-me{
+  .about-me {
     display: block;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    padding-bottom: 100px;
     width: 100%;
   }
   .about-me p{
     font-size: 2.4rem;
   }
-  
 }
